# exoplanet-spectrum-recovery-ml

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
backend/: requirements.txt
backend/app/: api.py  main.py
backend/app/api/: __init__.py  analyses.py  health.py  models.py  spectrum.py
backend/app/core/: config.py
backend/app/models/: __init__.py  ml_models.py  spectrum.py
backend/app/services/: __init__.py  data_loader.py  line_detection.py  preprocessing.py  spectrum_service.py
backend/tests/: test_api.py
data/catalogs/: .gitkeep
data/raw/: .gitkeep
data/synthetic/: .gitkeep
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  ExoSpectraNet_IEEE_Paper.tex
explainability/: explain_predictions.py
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Layout.jsx  PDFReportGenerator.css  PDFReportGenerator.tsx  ResultsPanel.css  ResultsPanel.tsx  SpectrumChatbot.css  SpectrumChatbot.tsx  SpectrumPlot.jsx  SpectrumUploader.jsx
frontend/src/hooks/: useSpectrumStore.js
frontend/src/pages/: AboutPage.jsx  AnalysisPage.jsx  DataPage.jsx  HomePage.jsx  LandingPage.css  LandingPage.tsx  ModelsPage.jsx  ResearchComparison.css  ResearchComparison.tsx  SpectrumDashboard.css  SpectrumDashboard.tsx  SpectrumUploadPage.css  SpectrumUploadPage.tsx
frontend/src/services/: api.js
models/architectures/: __init__.py  denoiser.py  retrieval.py  spectrum_cnn.py  spectrum_transformer.py
models/configs/: denoiser_v1.yaml  denoiser_v2.yaml
models/training/: train_denoiser.py
notebooks/: 01_spectrum_analysis_tutorial.ipynb  02_model_training.ipynb
scripts/: download_exoplanet_data.py  generate_realistic_spectra.py  generate_synthetic_data.py
src/chatbot/: rag_chatbot.py
training/: train_pipeline.py
