[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exoplanet-spectrum-recovery"
version = "0.1.0"
description = "A research-grade platform for exoplanet atmospheric spectrum analysis and recovery"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "exoplanet",
    "spectroscopy",
    "astronomy",
    "machine-learning",
    "deep-learning",
    "atmospheric-retrieval"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "astropy>=5.3.0",
    "torch>=2.0.0",
    "plotly>=5.15.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/exoplanet-spectrum-recovery"
Documentation = "https://exoplanet-spectrum-recovery.readthedocs.io"
Repository = "https://github.com/yourusername/exoplanet-spectrum-recovery.git"
Issues = "https://github.com/yourusername/exoplanet-spectrum-recovery/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "models*", "scripts*"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [".git", ".venv", "node_modules", "build", "dist"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["backend/tests", "models/tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=backend --cov=models --cov-report=html"
